# Digital_Garden

./: .env.example  PRD_Roadmap.md  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json
docs/: Android_Companion_App_Plan.md  CHANGELOG_2026-02-25.md  Local_App_Architecture.md  PRD_Roadmap.md  RELEASE_NOTE_v1.3.0.md  Reports.md  new.md  report.md  spec.md  spec_2.27.md  数据存储白皮书.md
scripts/: process-icon.js  test-bilibili-metadata.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  GlobalClock.tsx  Layout.tsx  MarkdownEditor.tsx  Sidebar.tsx  ThemedPromptDialog.tsx
src/context/: KnowledgeSelectionContext.tsx
src/hooks/: useSync.ts
src/lib/: dataService.ts  markdown.ts  settings.ts  videoBookmark.ts
src/pages/: Blog.tsx  BlogPost.tsx  Dashboard.tsx  ErrorBook.tsx  FocusInsights.tsx  Notes.tsx  Quiz.tsx  Resources.tsx  Settings.tsx  Tasks.tsx  WeeklyReview.tsx
src/utils/: aiClient.ts  apiBridge.ts
