[package]
name = "app"
version = "1.4.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-opener = "2.4.1"
tauri-plugin-shell = "2"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["clock"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
axum = { version = "0.8.4", features = ["ws", "multipart"] }
local-ip-address = "0.6.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8.0"
mime_guess = "2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
